RESOLVED FIXED189095
Followup (r235427): Use the null string instead of std::nullopt when no suggestion is selected
https://bugs.webkit.org/show_bug.cgi?id=189095
Summary Followup (r235427): Use the null string instead of std::nullopt when no sugge...
Aditya Keerthi
Reported 2018-08-29 13:14:26 PDT
Code cleanup.
Attachments
Patch (2.64 KB, patch)
2018-08-29 13:22 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2018-08-29 13:22:35 PDT
WebKit Commit Bot
Comment 2 2018-08-29 14:09:50 PDT
Comment on attachment 348425 [details] Patch Clearing flags on attachment: 348425 Committed r235478: <https://trac.webkit.org/changeset/235478>
WebKit Commit Bot
Comment 3 2018-08-29 14:09:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-08-29 14:10:16 PDT
Note You need to log in before you can comment on or make changes to this bug.