Followup (r235427): Use the null string instead of std::nullopt when no suggestion is selected https://bugs.webkit.org/show_bug.cgi?id=189095

Reviewed by Tim Horton.

Followup to r235427 as per Darin's comment.

We can avoid unnecessary use of std::optional by taking advantage of the fact that
WTF::String already has a null value distinct from the empty value.

No change in behavior.

* UIProcess/mac/WebDataListSuggestionsDropdownMac.mm:
(WebKit::WebDataListSuggestionsDropdownMac::selectOption):
(-[WKDataListSuggestionsView currentSelectedString]):


Canonical link: https://commits.webkit.org/204130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235478 268f45cc-cd09-0410-ab3c-d52691b4dbfc